# ai-agent-hackathon

./: Makefile  README.md
ai-api/: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
ai-api/app/: main.py  router.py  spec.py
ai-api/app/domain/: chat.py  health.py
ai-api/app/infrastructure/: config.py  firestore.py  vertex_chat_llm_client.py  vertex_client.py
ai-api/app/services/: ai_service.py  llm_chat_service.py  summery_service.py  survey_service.py
ai-api/app/services/gateways/: chat_llm_client.py
front-flutter/ios/Runner/: Info.plist
front-flutter/linux/runner/: my_application.cc
front-flutter/web/: manifest.json
front-flutter/windows/runner/: Runner.rc
front-mobile/: README.md  pubspec.yaml
front-mobile/android/app/: build.gradle.kts
front-mobile/dart_defines/: dev.json  local_android.json
front-mobile/ios/Runner.xcodeproj/: project.pbxproj
front-mobile/linux/: CMakeLists.txt
front-mobile/macos/Runner.xcodeproj/: project.pbxproj
front-mobile/test/: widget_test.dart
front-mobile/web/: index.html
front-mobile/windows/: CMakeLists.txt
front-mobile/windows/runner/: main.cpp
front-web/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
front-web/src/app/: layout.tsx  page.tsx
front-web/src/components/: ChatMessage.tsx  ChatUI.tsx  UIDInitializer.tsx
front-web/src/hooks/: useAutoResizeTextarea.ts  useAutoScroll.ts  useChatMessages.ts  useEvaluate.ts  useMessageSender.ts
front-web/src/pages/: _app.tsx  index.tsx
front-web/src/providers/: ReduxProvider.tsx
(+25 files in other folders)
